force-app/main/default/objects/SMS_Log__c/SMS_Log__c.object-meta.xml
<CustomObject>
    <label>SMS Log</label>
    <nameField>
        <displayFormat>SLN-{0000}</displayFormat>
        <label>SMS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>