force-app/main/default/objects/SMS_Log__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Logs</relationshipLabel>
    <relationshipName>SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>