force-app/main/default/objects/SMS_Log__c/fields/Qualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualified Lead</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SMS Logs</relationshipLabel>
    <relationshipName>SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>