force-app/main/default/objects/SMS_Log__c/fields/RP_Dealer__c.field-meta.xml
<CustomField>
    <fullName>RP_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RP Dealer</label>
    <referenceTo>RP_Dealer__c</referenceTo>
    <relationshipLabel>SMS Logs</relationshipLabel>
    <relationshipName>SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>