force-app/main/default/objects/SMS_Log__c/fields/Send_To__c.field-meta.xml
<CustomField>
    <fullName>Send_To__c</fullName>
    <label>Send To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>