force-app/main/default/objects/SMS_Log__c/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <label>SMS Template</label>
    <referenceTo>SMS_Template__c</referenceTo>
    <relationshipLabel>SMS Logs</relationshipLabel>
    <relationshipName>SMS_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>