force-app/main/default/objects/SMS_Log__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>SMS Logs</relationshipLabel>
    <relationshipName>SMS_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>