force-app/main/default/objects/SMS_Log__c/fields/Whatsapp_Api_Request__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Api_Request__c</fullName>
    <label>Whatsapp Api Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>